# PSiO_SFML

./: CMakeLists.txt  Readme.txt
include/: AnimatedSprite.h
src/: AnimatedSprite.cpp  main.cpp
